comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt enim explicabo consectetur molestias dolor iste repudiandae eaque placeat, ipsum impedit fuga sint a, animi ducimus veritatis! Ratione error libero sit!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Java Script</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias, nam neque doloribus nisi vitae voluptas officia, hic pariatur quae recusandae accusamus distinctio labore expedita! Molestiae suscipit cum iure harum!</p>
         </article>
     </main>
 </body>
