--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt enim explicabo consectetur molestias dolor iste repudiandae eaque placeat, ipsum impedit fuga sint a, animi ducimus veritatis! Ratione error libero sit!</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de Java Script</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias, nam neque doloribus nisi vitae voluptas officia, hic pariatur quae recusandae accusamus distinctio labore expedita! Molestiae suscipit cum iure harum!</p>
+            <P><a href="curso-js.html">Acesse o curso de JavaScript</a></P>
         </article>
     </main>
 </body>
