--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt enim explicabo consectetur molestias dolor iste repudiandae eaque placeat, ipsum impedit fuga sint a, animi ducimus veritatis! Ratione error libero sit!</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
             <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de Java Script</h2>
             <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias, nam neque doloribus nisi vitae voluptas officia, hic pariatur quae recusandae accusamus distinctio labore expedita! Molestiae suscipit cum iure harum!</p>
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
             <P><a href="curso-js.html">Acesse o curso de JavaScript</a></P>
         </article>
     </main>
